--- a/Book.html
+++ b/Book.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Favorite Books – Karan</title>
+  <title>Favorite Books – yash</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
